zellij-integration-tests/tests/snapshots/scroll__focusing_a_scrolled_pane_re_enters_scroll_mode_at_the_same_offset.snap
---
source: zellij-integration-tests/tests/scroll.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
                                                         Pane #1                                       [ SCROLL: 4/32 ]
upper29
upper30
upper31
upper32
upper33
upper34
upper35
upper36
█pper37
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
                                                         Pane #2
$
 Ctrl + <s> SEARCH   s  Search  ↓↑  Scroll  PgDn|PgUp  Scroll  d|u  Scroll  e  Edit  ENTER  Select 
