zellij-integration-tests/tests/snapshots/scroll__half_page_scroll_down.snap
---
source: zellij-integration-tests/tests/scroll.rs
assertion_line: 98
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  + 
line20
line21
line22
line23
line24
line25
line26
line27
line28
line29
line30
line31
line32
line33
line34
line35
line36
line37
line38
line39
line40
█
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
