zellij-integration-tests/tests/snapshots/scroll__half_page_scroll_up.snap
---
source: zellij-integration-tests/tests/scroll.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  +                                                                        [ SCROLL 10/19 ]
line10
line11
line12
line13
line14
line15
line16
line17
line18
line19
line20
line21
line22
line23
line24
line25
line26
line27
line28
line29
line30
█ine31
 Ctrl + <s> SEARCH   s  Search  ↓|↑|PgDn|PgUp|d|u  Scroll  e  Edit  ENTER  Select  []  Commands 
