zellij-integration-tests/tests/snapshots/scroll__page_scroll_up.snap
---
source: zellij-integration-tests/tests/scroll.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  +                                                                        [ SCROLL 19/19 ]
$ line01
line02
line03
line04
line05
line06
line07
line08
line09
line10
line11
line12
line13
line14
line15
line16
line17
line18
line19
line20
line21
█ine22
 Ctrl + <s> SEARCH   s  Search  ↓|↑|PgDn|PgUp|d|u  Scroll  e  Edit  ENTER  Select  []  Commands 
