zellij-integration-tests/tests/snapshots/scroll__scroll_position_is_kept_when_leaving_scroll_mode.snap
---
source: zellij-integration-tests/tests/scroll.rs
expression: normalized(&grid_snapshot)
---
 Zellij (test)  Tab #1  +                                                                         [ SCROLL 4/19 ]
line16
line17
line18
line19
line20
line21
line22
line23
line24
line25
line26
line27
line28
line29
line30
line31
line32
line33
line34
line35
line36
█ine37
 Ctrl + <g> LOCK  <p> PANE  <t> TAB  <n> RESIZE  <h> MOVE  <s> SEARCH  <o> SESSION  <q> QUIT        ...
